Image pathc updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               >
             </li>
             <li class="nav-item">
-              <img src="img/google.png" />
+              <img src="/img/google.png" />
             </li>
           </ul>
         </div>
