App store and google play links added, app-ads txt defined

--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
                 aria-current="page"
                 target="_blank"
                 href="https://apps.apple.com/us/app/future-value-calculator/id1642215165"
-                >AppStore link</a
+                >AppStore</a
               >
             </li>
             <li class="nav-item">
-              <img src="/img/google.png" />
+              <a
+                class="nav-link active"
+                aria-current="page"
+                target="_blank"
+                href="https://play.google.com/store/apps/details?id=mind.compound.calculator"
+                >Google Play</a
+              >
             </li>
           </ul>
         </div>
