--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div class="card-body" style="overflow-y: auto">
               <h2 class="card-title">GLab.</h2>
               <p class="card-text">
-                I'm a motivated front-end developer adept at creating responsive web and hybrid mobile applications that meet
-                customer needs. Proficient in Ionic, Angular, TypeScript and JavaScript. I develope new ideas as a hobby.
+                I'm a motivated front-end developer adept at creating responsive web and hybrid mobile applications. Proficient in
+                Ionic, Angular, TypeScript and JavaScript. I develope new ideas as a hobby.
               </p>
               <hr />
             </div>
