Firebase analytics tracking added to ios and android so pp updated

--- a/compound-interest-calc-android-ios-privacy-policy.html
+++ b/compound-interest-calc-android-ios-privacy-policy.html
@@ -609,8 +609,8 @@
                       <li style="line-height: 1.5">
                         <span style="font-size: 15px"
                           ><span data-custom-class="body_text"
-                            ><em>Mobile Device Access.</em>We may request access or permission to collect Device IDs and use them
-                            for tracking purposes which is used by out third party advertisment sdk. We may request access or
+                            ><em>Mobile Device Access.</em>We may request access or permission to collect Device IDs, application usage data and use them
+                            for tracking purposes to improve our application(s). We may request access or
                             permission to certain features from your mobile device, including your mobile device's
                             <bdt class="forloop-component"></bdt><bdt class="question">storage</bdt>,
                             <bdt class="forloop-component"></bdt>and other features. If you wish to change our access or
