--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <div class="card-footer pt-2 mb-2" style="background: inherit; border-color: inherit">
               <h2 class="card-title pb-2">My latest work</h2>
               <h6 class="card-title">Compound Interest Calculator</h6>
-              <a href="https://play.google.com/store/apps/details?id=mind.compound.calculator" target="_blank"
+              <a href="https://play.google.com/store/apps/details?id=mind.compound.calculator"
                 ><img src="img/google.png" style="width: 100px"
               /></a>
-              <a href="https://apps.apple.com/us/app/future-value-calculator/id1642215165" target="_blank"
+              <a href="https://apps.apple.com/us/app/future-value-calculator/id1642215165"
                 ><img src="img/apple.png" style="width: 100px"
               /></a>
               <a href="https://twitter.com/fvCalculatorApp" target="_blank"><img src="img/twitter.png" style="width: 40px" /></a>
