--- a/narro-reader.android-ios-privacy-policy.html
+++ b/narro-reader.android-ios-privacy-policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Smart Notes - Privacy Policy</title>
+    <title>Narro Reader - Privacy Policy</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -139,7 +139,7 @@
                               class="block-component"
                             ></bdt>
                             (<bdt class="question"
-                              >Smart Notes)<span style="font-size: 15px; color: rgb(89, 89, 89)"
+                              >Narro Reader)<span style="font-size: 15px; color: rgb(89, 89, 89)"
                                 ><span style="font-size: 15px; color: rgb(89, 89, 89)"
                                   ><span data-custom-class="body_text"
                                     ><span style="font-size: 15px"
