--- a/index.html
+++ b/index.html
@@ -1,114 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="utf-8">
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <title>GLab.</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500&amp;subset=latin-ext" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <meta name="robots" content="noindex" />
-  </head>
-
-  <style>
-    html {
-      font-size: 14px;
-    }
-
-    .container {
-      font-size: 14px;
-      color: #313131;
-      font-family: "Open Sans";
-    }
-    .card-custom {
-      overflow: hidden;
-      min-height: 450px;
-      box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
-    }
-
-    .card-custom-img {
-      height: 200px;
-      min-height: 200px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      border-color: inherit;
-    }
-
-    /* First border-left-width setting is a fallback */
-    .card-custom-img::after {
-      position: absolute;
-      content: "";
-      top: 161px;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-top-width: 40px;
-      border-right-width: 0;
-      border-bottom-width: 0;
-      border-left-width: 545px;
-      border-left-width: calc(575px - 5vw);
-      border-top-color: transparent;
-      border-right-color: transparent;
-      border-bottom-color: transparent;
-      border-left-color: inherit;
-    }
-
-    .card-custom-avatar img {
-      border-radius: 50%;
-      box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
-      position: absolute;
-      top: 100px;
-      left: 1.25rem;
-      width: 100px;
-      height: 100px;
-    }
-  </style>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <style type="text/css">@font-face{font-family:'Nunito';font-style:italic;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXX3I6Li01BKofIMNaORs7nczIHNHI.woff2) format('woff2');unicode-range:U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;}@font-face{font-family:'Nunito';font-style:italic;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXX3I6Li01BKofIMNaHRs7nczIHNHI.woff2) format('woff2');unicode-range:U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}@font-face{font-family:'Nunito';font-style:italic;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXX3I6Li01BKofIMNaMRs7nczIHNHI.woff2) format('woff2');unicode-range:U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;}@font-face{font-family:'Nunito';font-style:italic;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXX3I6Li01BKofIMNaNRs7nczIHNHI.woff2) format('woff2');unicode-range:U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Nunito';font-style:italic;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXX3I6Li01BKofIMNaDRs7nczIH.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}@font-face{font-family:'Nunito';font-style:normal;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXV3I6Li01BKofIOOaBTMnFcQIG.woff2) format('woff2');unicode-range:U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;}@font-face{font-family:'Nunito';font-style:normal;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXV3I6Li01BKofIMeaBTMnFcQIG.woff2) format('woff2');unicode-range:U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}@font-face{font-family:'Nunito';font-style:normal;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXV3I6Li01BKofIOuaBTMnFcQIG.woff2) format('woff2');unicode-range:U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;}@font-face{font-family:'Nunito';font-style:normal;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXV3I6Li01BKofIO-aBTMnFcQIG.woff2) format('woff2');unicode-range:U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Nunito';font-style:normal;font-weight:200 1000;font-display:swap;src:url(https://fonts.gstatic.com/s/nunito/v26/XRXV3I6Li01BKofINeaBTMnFcQ.woff2) format('woff2');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}@font-face{font-family:'Oswald';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUtiYySUhiCXABTV.woff) format('woff');unicode-range:U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;}@font-face{font-family:'Oswald';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUJiYySUhiCXABTV.woff) format('woff');unicode-range:U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}@font-face{font-family:'Oswald';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUliYySUhiCXABTV.woff) format('woff');unicode-range:U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;}@font-face{font-family:'Oswald';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUhiYySUhiCXABTV.woff) format('woff');unicode-range:U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;}@font-face{font-family:'Oswald';font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v53/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUZiYySUhiCXAA.woff) format('woff');unicode-range:U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="robots" content="noindex">
+  <style>html{font-size:16px}</style><link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
   <body>
-    <div class="container">
-      <div class="pt-5 m-auto">
-        <div style="max-width: 500px; margin: 0 auto" class="pb-5">
-          <!-- Copy the content below until next comment -->
-          <div class="card card-custom bg-white border-white border-0">
-            <div class="card-custom-img" style="background-image: url(img/tri.jpg)"></div>
-            <div class="card-custom-avatar">
-              <img class="img-fluid" src="img/me.jpg" alt="Avatar" />
-            </div>
-            <div class="card-body" style="overflow-y: auto">
-              <h2 class="card-title">GLab.</h2>
-              <p class="card-text">
-                I'm a motivated front-end developer adept at creating responsive web and hybrid mobile applications. Proficient in
-                Ionic, Angular, TypeScript and JavaScript. I develope new ideas as a hobby.
-              </p>
-              <hr />
-            </div>
+    <app-root></app-root>
+  <script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script>
 
-            <div class="card-footer pt-2 mb-2" style="background: inherit; border-color: inherit">
-              <h2 class="card-title pb-4">My latest work</h2>
-
-              <div class="row">
-                <div class="col-auto"><img src="img/fv-cal-logo.png" style="width: 61px" /></div>
-                <div class="col" style="padding-left: 0px !important">
-                  <h6 class="card-title">Compound Interest Calculator</h6>
-                  <a href="https://play.google.com/store/apps/details?id=mind.compound.calculator" target="_blank"
-                    ><img src="img/google.png" style="width: 100px"
-                  /></a>
-                  <a href="https://apps.apple.com/us/app/future-value-calculator/id1642215165" target="_blank"
-                    ><img src="img/apple.png" style="width: 100px"
-                  /></a>
-                  <!-- <a href="https://twitter.com/fvCalculatorApp" target="_blank"
-                    ><img src="img/twitter.png" style="width: 40px"
-                  /></a> -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Copy until here -->
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+</body></html>
